# Rdf-renormalizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: lrp1_clusters.json
data/cons_AA_choice/cl2/: 2_8cb_ASP_Calpha.txt  2_8cb_CYS_Calpha.txt  2_8cb_GLU_Calpha.txt  2_8cb_LYS_Calpha.txt  2_8cb_PHE_Calpha.txt  2_8cb_SER_Calpha.txt
data/cons_AA_choice/cl3/: 4_10cb_ASP_Calpha.txt  4_10cb_CYS_Calpha.txt  4_10cb_GLU_Calpha.txt  4_10cb_LYS_Calpha.txt  4_10cb_PHE_Calpha.txt  4_10cb_SER_Calpha.txt
data/cons_AA_choice/cl4/: 6_11cb_ASP_Calpha.txt  6_11cb_CYS_Calpha.txt  6_11cb_GLU_Calpha.txt  6_11cb_LYS_Calpha.txt  6_11cb_PHE_Calpha.txt  6_11cb_SER_Calpha.txt
data/rdf_raw/cl2/ASP/: comp_10_1.xvg  comp_10_2.xvg  comp_10_3.xvg  comp_10_4.xvg  comp_10_5.xvg  comp_3_1.xvg  comp_3_2.xvg  comp_3_3.xvg  comp_3_4.xvg  comp_3_5.xvg  comp_4_1.xvg  comp_4_2.xvg  comp_4_3.xvg  comp_4_5.xvg  comp_5_1.xvg  comp_5_2.xvg  comp_5_3.xvg  comp_5_4.xvg  comp_5_5.xvg  comp_6_1.xvg  comp_6_2.xvg  comp_6_3.xvg  comp_6_4.xvg  comp_6_5.xvg  comp_7_1.xvg  comp_7_2.xvg  comp_7_3.xvg  comp_7_4.xvg  comp_7_5.xvg  comp_8_1.xvg  comp_8_2.xvg  comp_8_3.xvg  comp_8_4.xvg  comp_8_5.xvg  comp_9_1.xvg  comp_9_2.xvg  comp_9_3.xvg  comp_9_4.xvg  comp_9_5.xvg
data/rdf_raw/cl3/ASP/: comp_traj4_loopCL3_CB11_ASP1.xvg  (+41 more)
scripts/: run_cluster_residue.py
src/rdfrenorm/: __init__.py  config.py  data.py  renormalization.py
systems/cl2/: .step5.2_800-1000ns_smp100ps_SOLU.xtc_offsets.npz  step3_input_SOLU.gro
systems/cl3/: step5.2_0ns_SOLU.gro
systems/cl4/: step5.2_0ns_SOLU.gro
(+58 files in other folders)
